added missing import yt; added cooling/heating

--- a/silcc_flash_postprocess.ini
+++ b/silcc_flash_postprocess.ini
@@ -4,6 +4,8 @@ cosmic rays background
 stop temperature 3 K linear
 abundances HII grains
 save molecules last ".mol"
+save cooling last ".cool"
+save heating last ".heat"
 turbulence 5km/s no pressure
 save lines, emissivity, ".ems" last no hash
 N  2 121.7m
