--- a/default_postprocess.ini
+++ b/default_postprocess.ini
@@ -3,6 +3,8 @@ CMB
 cosmic rays background
 stop temperature 3 K linear
 abundances HII grains
+save heating last ".heat"
+save cooling last ".cool"
 save molecules last ".mol"
 turbulence 5km/s no pressure
 save lines, emissivity, ".ems" last no hash
