--- a/default_silcc_high_z_postprocess-c17.ini
+++ b/default_silcc_high_z_postprocess-c17.ini
@@ -2,7 +2,7 @@ iterate
 CMB
 cosmic rays background
 stop temperature 3 K linear
-abundances HII no grains
+abundances HII
 save heating last ".heat"
 save cooling last ".cool"
 save molecules last ".mol"
@@ -53,4 +53,23 @@ CO        200.218m
 HCO+      373.490m
 HCN       375.844m
 Si 2      34.8046m
+TIR       1800.00m
+TIR       1100.00m
+F12       12.0000m
+F25       25.0000m
+F60       60.0000m
+F100      100.000m
+MIPS      24.0000m
+MIPS      70.0000m
+MIPS      160.000m
+IRAC      3.60000m
+IRAC      4.50000m
+IRAC      5.80000m
+IRAC      8.00000m
+SPR1      250.000m
+SPR2      350.000m
+SPR3      500.000m
+PAC1      70.0000m
+PAC2      100.000m
+PAC3      160.000m
 end of lines
