--- a/default_silcc_high_z_postprocess-c17.ini
+++ b/default_silcc_high_z_postprocess-c17.ini
@@ -52,3 +52,30 @@ PAC1      70.0000m
 PAC2      100.000m
 PAC3      160.000m
 end of lines
+save line optical depth ".opt" last no hash
+N  2      121.767m
+N  2      205.244m
+N  2      6583.45A
+Blnd      5755.00A
+O  3      88.3323m
+O  3      5006.84A
+Blnd      4363.00A
+O  2      3726.03A
+Blnd      3727.00A
+O  2      3728.81A
+Blnd      7323.00A
+Blnd      7332.00A
+O  1      63.1679m
+O  1      145.495m
+Blnd      6300.00A
+S  3      18.7078m
+S  3      33.4704m
+S  3      9530.62A
+S  3      9068.62A
+S  3      6312.06A
+S  2      6716.44A
+S  2      6730.82A
+Blnd      6720.00A
+H  1      6562.81A
+H  1      4861.33A
+end of lines
