fixed error in opacity command

--- a/default_silcc_high_z_postprocess-c17.ini
+++ b/default_silcc_high_z_postprocess-c17.ini
@@ -52,7 +52,7 @@ PAC1      70.0000m
 PAC2      100.000m
 PAC3      160.000m
 end of lines
-save line optical depth ".opt" last no hash
+save line, optical depth some, ".opt" last no hash
 N  2      121.767m
 N  2      205.244m
 N  2      6583.45A
