other cloudy inits

--- a/gasspy/physics/sourcefunction_database/cloudy/init_files/default_postprocess-c17.ini
+++ b/gasspy/physics/sourcefunction_database/cloudy/init_files/default_postprocess-c17.ini
@@ -2,12 +2,13 @@ iterate
 CMB
 cosmic rays background
 stop temperature 3 K linear
-abundances HII grains
+abundances HII
+grains function sublimation
 save heating last ".heat"
 save cooling last ".cool"
 save molecules last ".mol"
 turbulence 5km/s no pressure
-save lines, emissivity, ".ems" last no hash
+save lines, emissivity, ".em" last no hash
 N  2      121.767m
 N  2      205.244m
 N  2      6583.45A
