Added different versions of the .ini cloudy file. Added functionality for the user to specify .ini in gasspy_config.yaml

--- a/gasspy/templates/gasspy_config.yaml
+++ b/gasspy/templates/gasspy_config.yaml
@@ -70,7 +70,8 @@ compression_ratio:
     HeIII:
       - 1
       - 5.0    
-
+# Path to ini file for cloudy
+cloudy_ini : "/path/to/GASSPY/gasspy/physics/sourcefunction_database/cloudy/init_files/spec_postprocess_atomic_no_qheat-c17.ini"
 ##########################
 # Raytracer  parameters
 ##########################
